# Voxel-Engine-OpenGL

./: .gitignore  CMakeLists.txt  README.md
Source/: main.cpp
Source/Engine/: engine.cpp  engine.h
Source/Game/: game.cpp  game.h
Source/Physics/: physics.cpp  physics.h
Source/Render/: render.cpp  render.h
Source/Shaders/: blockShader.frag  blockShader.vert  uiShader.frag  uiShader.vert  waterShader.frag  waterShader.vert  wireFrameShader.frag  wireFrameShader.vert
Source/World/: world.cpp  world.h
